--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -11,8 +11,8 @@
       <nav>
         <div class="logo">
           <a href="home.html">
-            <img src="/Images/Logo.png" alt="Film Fusion Logo"
-          /></a>
+            <img src="/Images/Logo.png" alt="Film Fusion Logo" />
+          </a>
         </div>
         <ul class="nav-links">
           <li></li>
@@ -26,21 +26,188 @@
       </nav>
     </header>
     <main>
+      <div class="slideshow-container">
+        <div class="mySlides fade">
+          <img src="/Images/Slideshow/Slideshow (1).png" style="width: 100%" />
+        </div>
+
+        <div class="mySlides fade">
+          <img src="/Images/Slideshow/Slideshow (2).png" style="width: 100%" />
+        </div>
+
+        <div class="mySlides fade">
+          <img src="/Images/Slideshow/Slideshow (3).png" style="width: 100%" />
+        </div>
+        <div class="mySlides fade">
+          <img src="/Images/Slideshow/Slideshow (4).png" style="width: 100%" />
+        </div>
+        <div class="mySlides fade">
+          <img src="/Images/Slideshow/Slideshow (5).png" style="width: 100%" />
+        </div>
+        <div class="mySlides fade">
+          <img src="/Images/Slideshow/Slideshow (6).png" style="width: 100%" />
+        </div>
+        <div class="mySlides fade">
+          <img src="/Images/Slideshow/Slideshow (7).png" style="width: 100%" />
+        </div>
+        <div class="mySlides fade">
+          <img src="/Images/Slideshow/Slideshow (8).png" style="width: 100%" />
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <br />
+
       <section>
-        <h2>Latest Movie Reviews</h2>
+        <h2>Recommendations</h2>
         <div class="movie-list">
-          <!-- Display the latest movie reviews here -->
+          <div class="scrolling-container">
+            <!-- Movie Cards with Posters -->
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 1.png" alt="Movie Poster" />
+              <p>Breaking bad</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 2.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 3.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 4.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 5.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 6.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 7.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+          </div>
         </div>
       </section>
       <section>
-        <h2>Popular Movies</h2>
+        <h2>Movies</h2>
         <div class="movie-list">
-          <!-- Display the popular movies here -->
+          <div class="scrolling-container">
+            <!-- Movie Cards with Posters -->
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 1.png" alt="Movie Poster" />
+              <p>Breaking bad</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 2.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 3.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 4.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 5.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 6.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 7.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h2>Serires</h2>
+        <div class="movie-list">
+          <div class="scrolling-container">
+            <!-- Movie Cards with Posters -->
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 1.png" alt="Movie Poster" />
+              <p>Breaking bad</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 2.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 3.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 4.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 5.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 6.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 7.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h2>Up Coming</h2>
+        <div class="movie-list">
+          <div class="scrolling-container">
+            <!-- Movie Cards with Posters -->
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 1.png" alt="Movie Poster" />
+              <p>Breaking bad</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 2.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 3.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 4.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 5.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 6.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+            <div class="movie-card">
+              <img src="/Images/Scroll/image 7.png" alt="Movie Poster" />
+              <p>Movie Title</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
     <footer>
       <p>&copy; 2024 Film Fusion. All rights reserved.</p>
     </footer>
+    <script src="/JS/Home.js"></script>
   </body>
 </html>
