--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -11,7 +11,7 @@
       <nav>
         <div class="logo">
           <a href="home.html">
-            <img src="/Images/Logo.png" alt="Film Fusion Logo" />
+            <img src="/Images/Logo_colored.png" alt="Film Fusion Logo" />
           </a>
         </div>
         <ul class="nav-links">
