--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -16,12 +16,12 @@
         </div>
         <ul class="nav-links">
           <li></li>
-          <li><a href="About-us.html">About Us</a></li>
-          <li><a href="series.html">Series</a></li>
           <li><a href="movies.html">Movies</a></li>
+          <li><a href="series.html">Series</a></li>
+          <li><a href="About-us.html">About Us</a></li>
         </ul>
         <div class="profile-icon">
-          <img src="/Images/account.png" alt="Profile Icon" />
+          <img src="/Images/PersonCircle-removebg-preview.png" alt="Profile Icon" />
         </div>
       </nav>
     </header>
