--- a/Pages/movies.html
+++ b/Pages/movies.html
@@ -1,1 +1,32 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Film Fusion - Movies</title>
+    <link rel="stylesheet" href="/CSS/Movies.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div class="logo">
+          <a href="Home.html">
+            <img src="/Images/Logo.png" alt="Film Fusion Logo" width="170" height="80"/>
+          </a>
+        </div>
+        <ul class="nav-links">
+          <li></li>
+          <li ><a style="color: rgb(92,131,116);" href="movies.html">Movies</a></li>
+          <li><a href="series.html">Series</a></li>
+          <li><a href="About-us.html">About Us</a></li>
+        </ul>
+        <div class="profile-icon">
+          <img src="/Images/PersonCircle-removebg-preview.png" alt="Profile Icon" />
+        </div>
+      </nav>
+    </header>
+    <main>
+        <h2>Movies</h2>
+        
+    </main>
+    
