--- a/Pages/About-us.html
+++ b/Pages/About-us.html
@@ -30,4 +30,5 @@
         <p>Film Fusion – your go-to hub for all movies and series lovers .<br> 
            This website helps you to choose the suitable movie or series by reading the reviews of other users or parents guide.</p>
     </main>
-    
+  </body>
+</html>
