--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -98,31 +98,31 @@
           <div class="scrolling-container">
             <!-- Movie Cards with Posters -->
             <div class="movie-card">
-              <img src="/Images/Scroll/image 1.png" alt="Movie Poster" />
+              <img src="/Images\Movies\AvatarThewayofwater.jpg" alt="Movie Poster" />
               <p>Breaking bad</p>
             </div>
             <div class="movie-card">
-              <img src="/Images/Scroll/image 2.png" alt="Movie Poster" />
+              <img src="/Images\Movies\bohemian-rhapsody.jpg" alt="Movie Poster" />
               <p>Movie Title</p>
             </div>
             <div class="movie-card">
-              <img src="/Images/Scroll/image 3.png" alt="Movie Poster" />
+              <img src="/Images\Movies\Lala Land.jpg" alt="Movie Poster" />
               <p>Movie Title</p>
             </div>
             <div class="movie-card">
-              <img src="/Images/Scroll/image 4.png" alt="Movie Poster" />
+              <img src="/Images\Movies\Star_Wars_theriseof skywalker.jpg" alt="Movie Poster" />
               <p>Movie Title</p>
             </div>
             <div class="movie-card">
-              <img src="/Images/Scroll/image 5.png" alt="Movie Poster" />
+              <img src="/Images\Movies\The Hunger Games Mockingjay part 2.jpg" alt="Movie Poster" />
               <p>Movie Title</p>
             </div>
             <div class="movie-card">
-              <img src="/Images/Scroll/image 6.png" alt="Movie Poster" />
+              <img src="/Images\Movies\Godzila.jpg" alt="Movie Poster" />
               <p>Movie Title</p>
             </div>
             <div class="movie-card">
-              <img src="/Images/Scroll/image 7.png" alt="Movie Poster" />
+              <img src="/Images\Movies\Maze Runner The Death Cure.jpg" alt="Movie Poster" />
               <p>Movie Title</p>
             </div>
           </div>
