--- a/Pages/movies.html
+++ b/Pages/movies.html
@@ -27,6 +27,153 @@
     </header>
     <main>
         <h2>Movies</h2>
-        
+      <div class="row">
+        <div class="col-1 card">
+            <img src="\Images\Movies\ant_man.jpg" alt="ant_man" />
+            <div class="overlay">
+              <div class="text">Ant Man</div>
+            </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\AvatarThewayofwater.jpg" alt="avtar" />
+          <div class="overlay">
+            <div class="text">Avatar The Way Of Water</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\AvengersEndgame.jpg" alt="Avengers" />
+          <div class="overlay">
+            <div class="text">Avengers End Game</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\BlackPanther Wakanda Forever.jpg" alt="BlackPanther" />
+          <div class="overlay">
+            <div class="text">Black Panther Wakanda Forever</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\BlackPanther.jpg" alt="BlackPanther" />
+          <div class="overlay">
+            <div class="text">Black Panther</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\bohemian-rhapsody.jpg" alt="bohemian-rhapsody" />
+          <div class="overlay">
+            <div class="text">Bohemian Rhapsody</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\Divergent.jpg" alt="Divergent" />
+          <div class="overlay">
+            <div class="text">Divergent</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\Godzila.jpg" alt="Godzila" />
+          <div class="overlay">
+            <div class="text">Godzila</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\HarryPotter and philosopher's stone.jpg" alt="HarryPotter" />
+          <div class="overlay">
+            <div class="text">Harry Potter and Philosopher's Stone</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\Insideout2.jpg" alt="Insideout2" />
+          <div class="overlay">
+            <div class="text">Inside Out 2</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\Iceage4.jpg" alt="Iceage4" />
+          <div class="overlay">
+            <div class="text">Ice Age 4</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\Inception.jpg" alt="Inception" />
+          <div class="overlay">
+            <div class="text">Inception</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\Insurgent.jpg" alt="Insurgent" />
+          <div class="overlay">
+            <div class="text">Insurgent</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\Lala Land.jpg" alt="lalaland" />
+          <div class="overlay">
+            <div class="text">Lala Land</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\Maze Runner The Death Cure.jpg" alt="Mazerunner" />
+          <div class="overlay">
+            <div class="text">Maze Runner The Death Cure</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\Oppenheimer.jpg" alt="Oppenheimer" />
+          <div class="overlay">
+            <div class="text">Oppenheimer</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\RedCoat.jpg" alt="RedCoat" />
+          <div class="overlay">
+            <div class="text">Red Coat</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\snakeeyes.jpg" alt="Snake Eyes" />
+          <div class="overlay">
+            <div class="text">Snake Eyes</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\Star_Wars_theriseof skywalker.jpg" alt="Star_Wars_theriseof skywalker" />
+          <div class="overlay">
+            <div class="text">Star Wars The Rise Of Sky Walker</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\Thor Love and Thunder.jpg" alt="Thor Love and Thunder" />
+          <div class="overlay">
+            <div class="text">Thor Love and Thunder</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\Titanic.jpg" alt="Titanic" />
+          <div class="overlay">
+            <div class="text">Titanic</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\walle.jpg" alt="walle" />
+          <div class="overlay">
+            <div class="text">Walle</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\jurassicworld.jpg" alt="jurassicworld" />
+          <div class="overlay">
+            <div class="text">Jurassic World</div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <img src="\Images\Movies\The Hunger Games Mockingjay part 2.jpg" alt="The Hunger Games Mockingjay part 2" />
+          <div class="overlay">
+            <div class="text">The Hunger Games Mockingjay part 2</div>
+          </div>
+        </div>
+      </div>
     </main>
+  </body>
+</html>
     
