--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -21,7 +21,10 @@
           <li><a href="About-us.html">About Us</a></li>
         </ul>
         <div class="profile-icon">
-          <img src="/Images/PersonCircle-removebg-preview.png" alt="Profile Icon" />
+          <img
+            src="/Images/PersonCircle-removebg-preview.png"
+            alt="Profile Icon"
+          />
         </div>
       </nav>
     </header>
@@ -98,11 +101,19 @@
           <div class="scrolling-container">
             <!-- Movie Cards with Posters -->
             <div class="movie-card">
-              <img src="/Images\Movies\AvatarThewayofwater.jpg" alt="Movie Poster" />
-              <p>Breaking bad</p>
+              <img
+                src="/Images\Movies\AvatarThewayofwater.jpg"
+                alt="Movie Poster"
+              />
+              <div class="overlay">
+                <p>Breaking bad</p>
+              </div>
             </div>
             <div class="movie-card">
-              <img src="/Images\Movies\bohemian-rhapsody.jpg" alt="Movie Poster" />
+              <img
+                src="/Images\Movies\bohemian-rhapsody.jpg"
+                alt="Movie Poster"
+              />
               <p>Movie Title</p>
             </div>
             <div class="movie-card">
@@ -110,11 +121,17 @@
               <p>Movie Title</p>
             </div>
             <div class="movie-card">
-              <img src="/Images\Movies\Star_Wars_theriseof skywalker.jpg" alt="Movie Poster" />
+              <img
+                src="/Images\Movies\Star_Wars_theriseof skywalker.jpg"
+                alt="Movie Poster"
+              />
               <p>Movie Title</p>
             </div>
             <div class="movie-card">
-              <img src="/Images\Movies\The Hunger Games Mockingjay part 2.jpg" alt="Movie Poster" />
+              <img
+                src="/Images\Movies\The Hunger Games Mockingjay part 2.jpg"
+                alt="Movie Poster"
+              />
               <p>Movie Title</p>
             </div>
             <div class="movie-card">
@@ -122,7 +139,10 @@
               <p>Movie Title</p>
             </div>
             <div class="movie-card">
-              <img src="/Images\Movies\Maze Runner The Death Cure.jpg" alt="Movie Poster" />
+              <img
+                src="/Images\Movies\Maze Runner The Death Cure.jpg"
+                alt="Movie Poster"
+              />
               <p>Movie Title</p>
             </div>
           </div>
