--- a/Pages/movies.html
+++ b/Pages/movies.html
@@ -29,7 +29,9 @@
         <h2>Movies</h2>
       <div class="row">
         <div class="col-1 card">
-            <img src="\Images\Movies\ant_man.jpg" alt="ant_man" />
+          <a href="Description.html">
+          <img src="\Images\Movies\ant_man.jpg" alt="ant_man" />
+        </a>
             <div class="overlay">
               <div class="text">Ant Man</div>
             </div>
