--- a/Pages/Description.html
+++ b/Pages/Description.html
@@ -4,5 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Film Fusion - Series</title>
-    <link rel="stylesheet" href="/CSS/Series.css" />
+    <link rel="stylesheet" href="/CSS/Description.css" />
 </head>
+<body>
+    <header>
+        <nav>
+          <div class="logo">
+            <a href="home.html">
+                <img src="/Images/Logo.png" alt="Film Fusion Logo" width="170" height="80"/>
+            </a>
+          </div>
+          <ul class="nav-links">
+            <li></li>
+            <li><a href="movies.html">Movies</a></li>
+            <li><a href="series.html">Series</a></li>
+            <li><a href="About-us.html">About Us</a></li>
+          </ul>
+          <div class="profile-icon">
+            <img
+              src="/Images/PersonCircle-removebg-preview.png"
+              alt="Profile Icon"
+            />
+          </div>
+        </nav>
+      </header>
+</body>
