--- a/Pages/movies.html
+++ b/Pages/movies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Film Fusion - Movies</title>
-    <link rel="stylesheet" href="/CSS/Movies.css" />
+    <link rel="stylesheet" href="/CSS/Movies-Series.css" />
   </head>
   <body>
     <header>
