--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -134,32 +134,32 @@
           <div class="scrolling-container">
             <!-- Movie Cards with Posters -->
             <div class="movie-card">
-              <img src="/Images/Scroll/image 1.png" alt="Movie Poster" />
-              <p>Breaking bad</p>
+              <img src="/Images\Series\1899.jpg" alt="Movie Poster" />
+              <p>1899</p>
             </div>
             <div class="movie-card">
-              <img src="/Images/Scroll/image 2.png" alt="Movie Poster" />
-              <p>Movie Title</p>
+              <img src="/Images\Series\Dark.jpg" alt="Movie Poster" />
+              <p>Dark</p>
             </div>
             <div class="movie-card">
-              <img src="/Images/Scroll/image 3.png" alt="Movie Poster" />
-              <p>Movie Title</p>
+              <img src="/Images\Series\desperate housewives.jpg" alt="Movie Poster" />
+              <p>Desperate Housewives</p>
             </div>
             <div class="movie-card">
-              <img src="/Images/Scroll/image 4.png" alt="Movie Poster" />
-              <p>Movie Title</p>
+              <img src="/Images\Series\Gameofthrones.jpg" alt="Movie Poster" />
+              <p>Game Of Thrones</p>
             </div>
             <div class="movie-card">
-              <img src="/Images/Scroll/image 5.png" alt="Movie Poster" />
-              <p>Movie Title</p>
+              <img src="/Images\Series\StrangerThings.jpg" alt="Movie Poster" />
+              <p>Stranger Things</p>
             </div>
             <div class="movie-card">
-              <img src="/Images/Scroll/image 6.png" alt="Movie Poster" />
-              <p>Movie Title</p>
+              <img src="/Images\Series\wednesday.jpg" alt="Movie Poster" />
+              <p>Wednesday</p>
             </div>
             <div class="movie-card">
-              <img src="/Images/Scroll/image 7.png" alt="Movie Poster" />
-              <p>Movie Title</p>
+              <img src="/Images\Series\thevampirediaries.jpg" alt="Movie Poster" />
+              <p>The Vampire Diaries</p>
             </div>
           </div>
         </div>
