--- a/Pages/About-us.html
+++ b/Pages/About-us.html
@@ -11,24 +11,42 @@
       <nav>
         <div class="logo">
           <a href="Home.html">
-            <img src="/Images/Logo.png" alt="Film Fusion Logo" width="170" height="80"/>
+            <img
+              src="/Images/Logo.png"
+              alt="Film Fusion Logo"
+              width="170"
+              height="80"
+            />
           </a>
         </div>
         <ul class="nav-links">
           <li></li>
-          <li ><a href="movies.html">Movies</a></li>
+          <li><a href="movies.html">Movies</a></li>
           <li><a href="series.html">Series</a></li>
-          <li><a style="color: rgb(92,131,116);" href="About-us.html">About Us</a></li>
+          <li>
+            <a style="color: rgb(92, 131, 116)" href="About-us.html"
+              >About Us</a
+            >
+          </li>
         </ul>
         <div class="profile-icon">
-          <img src="/Images/PersonCircle-removebg-preview.png" alt="Profile Icon" />
+          <img
+            src="/Images/PersonCircle-removebg-preview.png"
+            alt="Profile Icon"
+          />
         </div>
       </nav>
     </header>
     <main>
-        <h1>About Us</h1>
-        <p>Film Fusion – your go-to hub for all movies and series lovers .<br> 
-           This website helps you to choose the suitable movie or series by reading the reviews of other users or parents guide.</p>
+      <h1>About Us</h1>
+      <p>
+        Film Fusion – your go-to hub for all movies and series lovers .<br />
+        This website helps you to choose the suitable movie or series by reading
+        the reviews of other users or parents guide.
+      </p>
     </main>
+    <footer>
+      <p>&copy; 2024 Film Fusion. All rights reserved.</p>
+    </footer>
   </body>
 </html>
