--- a/Pages/movies.html
+++ b/Pages/movies.html
@@ -11,28 +11,38 @@
       <nav>
         <div class="logo">
           <a href="Home.html">
-            <img src="/Images/Logo.png" alt="Film Fusion Logo" width="170" height="80"/>
+            <img
+              src="/Images/Logo.png"
+              alt="Film Fusion Logo"
+              width="170"
+              height="80"
+            />
           </a>
         </div>
         <ul class="nav-links">
           <li></li>
-          <li ><a style="color: rgb(92,131,116);" href="movies.html">Movies</a></li>
+          <li>
+            <a style="color: rgb(92, 131, 116)" href="movies.html">Movies</a>
+          </li>
           <li><a href="series.html">Series</a></li>
           <li><a href="About-us.html">About Us</a></li>
         </ul>
         <div class="profile-icon">
-          <img src="/Images/PersonCircle-removebg-preview.png" alt="Profile Icon" />
+          <img
+            src="/Images/PersonCircle-removebg-preview.png"
+            alt="Profile Icon"
+          />
         </div>
       </nav>
     </header>
     <main>
-        <h2>Movies</h2>
+      <h2>Movies</h2>
       <div class="row">
         <div class="col-1 card">
-            <img src="\Images\Movies\ant_man.jpg" alt="ant_man" />
-            <div class="overlay">
-              <div class="text">Ant Man</div>
-            </div>
+          <img src="\Images\Movies\ant_man.jpg" alt="ant_man" />
+          <div class="overlay">
+            <div class="text">Ant Man</div>
+          </div>
         </div>
         <div class="col-1 card">
           <img src="\Images\Movies\AvatarThewayofwater.jpg" alt="avtar" />
@@ -47,7 +57,10 @@
           </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\BlackPanther Wakanda Forever.jpg" alt="BlackPanther" />
+          <img
+            src="\Images\Movies\BlackPanther Wakanda Forever.jpg"
+            alt="BlackPanther"
+          />
           <div class="overlay">
             <div class="text">Black Panther Wakanda Forever</div>
           </div>
@@ -59,7 +72,10 @@
           </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\bohemian-rhapsody.jpg" alt="bohemian-rhapsody" />
+          <img
+            src="\Images\Movies\bohemian-rhapsody.jpg"
+            alt="bohemian-rhapsody"
+          />
           <div class="overlay">
             <div class="text">Bohemian Rhapsody</div>
           </div>
@@ -77,7 +93,10 @@
           </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\HarryPotter and philosopher's stone.jpg" alt="HarryPotter" />
+          <img
+            src="\Images\Movies\HarryPotter and philosopher's stone.jpg"
+            alt="HarryPotter"
+          />
           <div class="overlay">
             <div class="text">Harry Potter and Philosopher's Stone</div>
           </div>
@@ -113,7 +132,10 @@
           </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\Maze Runner The Death Cure.jpg" alt="Mazerunner" />
+          <img
+            src="\Images\Movies\Maze Runner The Death Cure.jpg"
+            alt="Mazerunner"
+          />
           <div class="overlay">
             <div class="text">Maze Runner The Death Cure</div>
           </div>
@@ -137,13 +159,19 @@
           </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\Star_Wars_theriseof skywalker.jpg" alt="Star_Wars_theriseof skywalker" />
+          <img
+            src="\Images\Movies\Star_Wars_theriseof skywalker.jpg"
+            alt="Star_Wars_theriseof skywalker"
+          />
           <div class="overlay">
             <div class="text">Star Wars The Rise Of Sky Walker</div>
           </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\Thor Love and Thunder.jpg" alt="Thor Love and Thunder" />
+          <img
+            src="\Images\Movies\Thor Love and Thunder.jpg"
+            alt="Thor Love and Thunder"
+          />
           <div class="overlay">
             <div class="text">Thor Love and Thunder</div>
           </div>
@@ -167,13 +195,18 @@
           </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\The Hunger Games Mockingjay part 2.jpg" alt="The Hunger Games Mockingjay part 2" />
+          <img
+            src="\Images\Movies\The Hunger Games Mockingjay part 2.jpg"
+            alt="The Hunger Games Mockingjay part 2"
+          />
           <div class="overlay">
             <div class="text">The Hunger Games Mockingjay part 2</div>
           </div>
         </div>
       </div>
     </main>
+    <footer>
+      <p>&copy; 2024 Film Fusion. All rights reserved.</p>
+    </footer>
   </body>
 </html>
-    
