--- a/Pages/series.html
+++ b/Pages/series.html
@@ -11,28 +11,38 @@
       <nav>
         <div class="logo">
           <a href="Home.html">
-            <img src="/Images/Logo.png" alt="Film Fusion Logo" width="170" height="80"/>
+            <img
+              src="/Images/Logo.png"
+              alt="Film Fusion Logo"
+              width="170"
+              height="80"
+            />
           </a>
         </div>
         <ul class="nav-links">
           <li></li>
-          <li ><a href="movies.html">Movies</a></li>
-          <li><a style="color: rgb(92,131,116);" href="series.html">Series</a></li>
+          <li><a href="movies.html">Movies</a></li>
+          <li>
+            <a style="color: rgb(92, 131, 116)" href="series.html">Series</a>
+          </li>
           <li><a href="About-us.html">About Us</a></li>
         </ul>
         <div class="profile-icon">
-          <img src="/Images/PersonCircle-removebg-preview.png" alt="Profile Icon" />
+          <img
+            src="/Images/PersonCircle-removebg-preview.png"
+            alt="Profile Icon"
+          />
         </div>
       </nav>
     </header>
     <main>
-        <h2>Series</h2>
+      <h2>Series</h2>
       <div class="row">
         <div class="col-1 card">
-            <img src="\Images\Series\1899.jpg" alt="1899" />
-            <div class="overlay">
-              <div class="text">1899</div>
-            </div>
+          <img src="\Images\Series\1899.jpg" alt="1899" />
+          <div class="overlay">
+            <div class="text">1899</div>
+          </div>
         </div>
         <div class="col-1 card">
           <img src="\Images\Series\Dark.jpg" alt="dark" />
@@ -59,7 +69,10 @@
           </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Series\thevampirediaries.jpg" alt="thevampirediaries" />
+          <img
+            src="\Images\Series\thevampirediaries.jpg"
+            alt="thevampirediaries"
+          />
           <div class="overlay">
             <div class="text">The Vampire Diaries</div>
           </div>
@@ -71,13 +84,18 @@
           </div>
         </div>
         <div class="col-1 card">
-            <img src="\Images\Series\desperate housewives.jpg" alt="desperatehousewives" />
-            <div class="overlay">
-              <div class="text">Desperate Housewives</div>
-            </div>
+          <img
+            src="\Images\Series\desperate housewives.jpg"
+            alt="desperatehousewives"
+          />
+          <div class="overlay">
+            <div class="text">Desperate Housewives</div>
+          </div>
         </div>
       </div>
     </main>
+    <footer>
+      <p>&copy; 2024 Film Fusion. All rights reserved.</p>
+    </footer>
   </body>
 </html>
-    
