--- a/Pages/About-us.html
+++ b/Pages/About-us.html
@@ -21,7 +21,7 @@
           <li><a style="color: rgb(92,131,116);" href="About-us.html">About Us</a></li>
         </ul>
         <div class="profile-icon">
-          <img src="/Images/PersonCircle-removebg-preview.png" alt="Profile Icon" />
+          <a href="Sign-up.html"><img src="/Images/PersonCircle-removebg-preview.png" alt="Profile Icon" /></a>
         </div>
       </nav>
     </header>
