--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -21,7 +21,9 @@
           <li><a href="About-us.html">About Us</a></li>
         </ul>
         <div class="profile-icon">
+          <a href="Sign-up.html">
           <img src="/Images/PersonCircle-removebg-preview.png" alt="Profile Icon" />
+          </a>
         </div>
       </nav>
     </header>
