--- a/Pages/movies.html
+++ b/Pages/movies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Film Fusion - Movies</title>
-    <link rel="stylesheet" href="/CSS/Movies-Series.css" />
+    <link rel="stylesheet" href="/CSS/Movies.css" />
   </head>
   <body>
     <header>
@@ -28,10 +28,11 @@
           <li><a href="About-us.html">About Us</a></li>
         </ul>
         <div class="profile-icon">
-          <img
-            src="/Images/PersonCircle-removebg-preview.png"
-            alt="Profile Icon"
-          />
+          <a href="Sign-up.html"
+            ><img
+              src="/Images/PersonCircle-removebg-preview.png"
+              alt="Profile Icon"
+          /></a>
         </div>
       </nav>
     </header>
@@ -205,8 +206,5 @@
         </div>
       </div>
     </main>
-    <footer>
-      <p>&copy; 2024 Film Fusion. All rights reserved.</p>
-    </footer>
   </body>
 </html>
