--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -113,43 +113,43 @@
             <div class="col-1 card">
               <img src="/Images\Movies\AvatarThewayofwater.jpg" alt="Movie Poster" />
                <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">Avatar The way of water</div>
           </div>
             </div>
             <div class="col-1 card">
               <img src="/Images\Movies\bohemian-rhapsody.jpg" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">bohemian Rhapsody</div>
           </div>
             </div>
             <div class="col-1 card">
               <img src="/Images\Movies\Lala Land.jpg" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">Lala Land</div>
           </div>
             </div>
             <div class="col-1 card">
               <img src="/Images\Movies\Star_Wars_theriseof skywalker.jpg" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">Star Wars the rise of skywalker</div>
           </div>
             </div>
             <div class="col-1 card">
               <img src="/Images\Movies\The Hunger Games Mockingjay part 2.jpg" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">The Hunger Games Mockingjay part 2</div>
           </div>
             </div>
             <div class="col-1 card">
               <img src="/Images\Movies\Godzila.jpg" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">Godzila</div>
           </div>
             </div>
             <div class="col-1 card">
               <img src="/Images\Movies\Maze Runner The Death Cure.jpg" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">Maze Runner The Death Cure</div>
           </div>
             </div>
           </div>
