--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -70,37 +70,37 @@
             <div class="col-1 card">
               <img src="/Images/Scroll/image 2.png" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">Orion and the Dark</div>
           </div>
             </div>
             <div class="col-1 card">
               <img src="/Images/Scroll/image 3.png" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">Oppenheimer</div>
           </div>
             </div>
             <div class="col-1 card">
               <img src="/Images/Scroll/image 4.png" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">DUNE Part 1</div>
           </div>
             </div>
             <div class="col-1 card">
               <img src="/Images/Scroll/image 5.png" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">Interstellar </div>
           </div>
             </div>
             <div class="col-1 card">
               <img src="/Images/Scroll/image 6.png" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">Suits </div>
           </div>
             </div>
             <div class="col-1 card">
               <img src="/Images/Scroll/image 7.png" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">Mission: Impossible - Dead Reckoning Part One</div>
           </div>
             </div>
           </div>
