--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -82,7 +82,7 @@
             <div class="col-1 card">
               <img src="/Images/Scroll/image 4.png" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">DUNE Part 1</div>
+            <div class="text">Dune Part 1</div>
           </div>
             </div>
             <div class="col-1 card">
