--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -159,45 +159,45 @@
         <div class="row">
             <!-- Movie Cards with Posters -->
             <div class="col-1 card">
-              <img src="/Images/Scroll/image 1.png" alt="Movie Poster" />
+              <img src="/Images\Series\1899.jpg" alt="Movie Poster" />
                <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">1899</div>
           </div>
             </div>
             <div class="col-1 card">
-              <img src="/Images/Scroll/image 2.png" alt="Movie Poster" />
+              <img src="/Images\Series\Dark.jpg" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">Dark</div>
           </div>
             </div>
             <div class="col-1 card">
-              <img src="/Images/Scroll/image 3.png" alt="Movie Poster" />
+              <img src="/Images\Series\desperate housewives.jpg" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">Desperate Housewives</div>
           </div>
             </div>
             <div class="col-1 card">
-              <img src="/Images/Scroll/image 4.png" alt="Movie Poster" />
+              <img src="/Images\Series\Gameofthrones.jpg" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">Game Of Thrones</div>
           </div>
             </div>
             <div class="col-1 card">
-              <img src="/Images/Scroll/image 5.png" alt="Movie Poster" />
+           <img src="/Images\Series\StrangerThings.jpg" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">Stranger Things</div>
           </div>
             </div>
             <div class="col-1 card">
-              <img src="/Images/Scroll/image 6.png" alt="Movie Poster" />
+               <img src="/Images\Series\wednesday.jpg" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">wednesday</div>
           </div>
             </div>
             <div class="col-1 card">
-              <img src="/Images/Scroll/image 7.png" alt="Movie Poster" />
+            <img src="/Images\Series\thevampirediaries.jpg" alt="Movie Poster" />
               <div class="overlay">
-            <div class="text">Breaking bad</div>
+            <div class="text">The Vampire Diaries</div>
           </div>
             </div>
           </div>
