--- a/Pages/movies.html
+++ b/Pages/movies.html
@@ -205,5 +205,8 @@
         </div>
       </div>
     </main>
+    <footer>
+      <p>&copy; 2024 Film Fusion. All rights reserved.</p>
+    </footer>
   </body>
 </html>
