--- a/Pages/About-us.html
+++ b/Pages/About-us.html
@@ -30,12 +30,9 @@
           </li>
         </ul>
         <div class="profile-icon">
-
-          <img
-            src="/Images/PersonCircle-removebg-preview.png"
-            alt="Profile Icon"
-          />
-
+          <a href="Sign-up.html">
+            <img src="/Images/PersonCircle-removebg-preview.png" alt="Profile Icon" />
+            </a>
         </div>
       </nav>
     </header>
