--- a/Pages/series.html
+++ b/Pages/series.html
@@ -29,10 +29,9 @@
           <li><a href="About-us.html">About Us</a></li>
         </ul>
         <div class="profile-icon">
-          <img
-            src="/Images/PersonCircle-removebg-preview.png"
-            alt="Profile Icon"
-          />
+          <a href="Sign-up.html">
+            <img src="/Images/PersonCircle-removebg-preview.png" alt="Profile Icon" />
+            </a>
         </div>
       </nav>
     </header>
