--- a/Pages/Sign-up.html
+++ b/Pages/Sign-up.html
@@ -92,6 +92,21 @@
             width: 50%;
             
         }
+        footer {
+  background-color: #06131a;
+  color: white;
+  text-align: center;
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+  padding: 10px;
+}
+footer p {
+  padding-top: 0px;
+  color: #ffffff;
+  margin-left: 0%;
+  font-size: 16px;
+}
 
     </style>
   </head>
@@ -141,11 +156,9 @@
                 <p style="align-self: center; font-size: 28px; color: white; ">Already Have An Account? </><a href="Sign-in.html" style="color: #5C8374; font-size: 28px; align-self:center;">Sign In</p></a>
             </div>
           </div>
-
     </main>
     <footer>
-        
-      <p style="padding-top: 35%;">.<br><br><br><br><br>&copy; 2024 Film Fusion. All rights reserved.</p>
+      <p>&copy; 2024 Film Fusion. All rights reserved.</p>
     </footer>
     <script src="/JS/Home.js"></script>
   </body>
