API For movies Posters and Names

--- a/Pages/movies.html
+++ b/Pages/movies.html
@@ -40,175 +40,139 @@
       <div class="row">
         <div class="col-1 card">
           <a href="Description.html">
-          <img src="\Images\Movies\ant_man.jpg" alt="ant_man" />
-        </a>
+          <img src="  " id="movieposter0" />
+          </a>
             <div class="overlay">
-              <div class="text">Ant Man</div>
+              <div class="text" id="moviename0"> </div>
             </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\AvatarThewayofwater.jpg" alt="avtar" />
-          <div class="overlay">
-            <div class="text">Avatar The Way Of Water</div>
-          </div>
+          <a href="Description.html">
+          <img src="  " id="movieposter1" />
+          </a>
+            <div class="overlay">
+              <div class="text" id="moviename1"> </div>
+            </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\AvengersEndgame.jpg" alt="Avengers" />
-          <div class="overlay">
-            <div class="text">Avengers End Game</div>
-          </div>
+          <a href="Description.html">
+          <img src="  " id="movieposter2" />
+          </a>
+            <div class="overlay">
+              <div class="text" id="moviename2"> </div>
+            </div>
         </div>
         <div class="col-1 card">
-          <img
-            src="\Images\Movies\BlackPanther Wakanda Forever.jpg"
-            alt="BlackPanther"
-          />
-          <div class="overlay">
-            <div class="text">Black Panther Wakanda Forever</div>
-          </div>
+          <a href="Description.html">
+          <img src="  " id="movieposter3" />
+          </a>
+            <div class="overlay">
+              <div class="text" id="moviename3"> </div>
+            </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\BlackPanther.jpg" alt="BlackPanther" />
-          <div class="overlay">
-            <div class="text">Black Panther</div>
-          </div>
+          <a href="Description.html">
+          <img src="  " id="movieposter4" />
+          </a>
+            <div class="overlay">
+              <div class="text" id="moviename4"> </div>
+            </div>
         </div>
         <div class="col-1 card">
-          <img
-            src="\Images\Movies\bohemian-rhapsody.jpg"
-            alt="bohemian-rhapsody"
-          />
-          <div class="overlay">
-            <div class="text">Bohemian Rhapsody</div>
-          </div>
+          <a href="Description.html">
+          <img src="  " id="movieposter5" />
+          </a>
+            <div class="overlay">
+              <div class="text" id="moviename5"> </div>
+            </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\Divergent.jpg" alt="Divergent" />
-          <div class="overlay">
-            <div class="text">Divergent</div>
-          </div>
+          <a href="Description.html">
+          <img src="  " id="movieposter6" />
+          </a>
+            <div class="overlay">
+              <div class="text" id="moviename6"> </div>
+            </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\Godzila.jpg" alt="Godzila" />
-          <div class="overlay">
-            <div class="text">Godzila</div>
-          </div>
+          <a href="Description.html">
+          <img src="  " id="movieposter7" />
+          </a>
+            <div class="overlay">
+              <div class="text" id="moviename7"> </div>
+            </div>
         </div>
         <div class="col-1 card">
-          <img
-            src="\Images\Movies\HarryPotter and philosopher's stone.jpg"
-            alt="HarryPotter"
-          />
-          <div class="overlay">
-            <div class="text">Harry Potter and Philosopher's Stone</div>
-          </div>
+          <a href="Description.html">
+          <img src="  " id="movieposter8" />
+          </a>
+            <div class="overlay">
+              <div class="text" id="moviename8"> </div>
+            </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\Insideout2.jpg" alt="Insideout2" />
-          <div class="overlay">
-            <div class="text">Inside Out 2</div>
-          </div>
+          <a href="Description.html">
+          <img src="  " id="movieposter9" />
+          </a>
+            <div class="overlay">
+              <div class="text" id="moviename9"> </div>
+            </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\Iceage4.jpg" alt="Iceage4" />
-          <div class="overlay">
-            <div class="text">Ice Age 4</div>
-          </div>
+          <a href="Description.html">
+          <img src="  " id="movieposter10" />
+          </a>
+            <div class="overlay">
+              <div class="text" id="moviename10"> </div>
+            </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\Inception.jpg" alt="Inception" />
-          <div class="overlay">
-            <div class="text">Inception</div>
-          </div>
+          <a href="Description.html">
+          <img src="  " id="movieposter11" />
+          </a>
+            <div class="overlay">
+              <div class="text" id="moviename11"> </div>
+            </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\Insurgent.jpg" alt="Insurgent" />
-          <div class="overlay">
-            <div class="text">Insurgent</div>
-          </div>
+          <a href="Description.html">
+          <img src="  " id="movieposter12" />
+          </a>
+            <div class="overlay">
+              <div class="text" id="moviename12"> </div>
+            </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\Lala Land.jpg" alt="lalaland" />
-          <div class="overlay">
-            <div class="text">Lala Land</div>
-          </div>
+          <a href="Description.html">
+          <img src="  " id="movieposter13" />
+          </a>
+            <div class="overlay">
+              <div class="text" id="moviename13"> </div>
+            </div>
         </div>
         <div class="col-1 card">
-          <img
-            src="\Images\Movies\Maze Runner The Death Cure.jpg"
-            alt="Mazerunner"
-          />
-          <div class="overlay">
-            <div class="text">Maze Runner The Death Cure</div>
-          </div>
+          <a href="Description.html">
+          <img src="  " id="movieposter14" />
+          </a>
+            <div class="overlay">
+              <div class="text" id="moviename14"> </div>
+            </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Movies\Oppenheimer.jpg" alt="Oppenheimer" />
-          <div class="overlay">
-            <div class="text">Oppenheimer</div>
-          </div>
+          <a href="Description.html">
+          <img src="  " id="movieposter15" />
+          </a>
+            <div class="overlay">
+              <div class="text" id="moviename15"> </div>
+            </div>
         </div>
-        <div class="col-1 card">
-          <img src="\Images\Movies\RedCoat.jpg" alt="RedCoat" />
-          <div class="overlay">
-            <div class="text">Red Coat</div>
-          </div>
-        </div>
-        <div class="col-1 card">
-          <img src="\Images\Movies\snakeeyes.jpg" alt="Snake Eyes" />
-          <div class="overlay">
-            <div class="text">Snake Eyes</div>
-          </div>
-        </div>
-        <div class="col-1 card">
-          <img
-            src="\Images\Movies\Star_Wars_theriseof skywalker.jpg"
-            alt="Star_Wars_theriseof skywalker"
-          />
-          <div class="overlay">
-            <div class="text">Star Wars The Rise Of Sky Walker</div>
-          </div>
-        </div>
-        <div class="col-1 card">
-          <img
-            src="\Images\Movies\Thor Love and Thunder.jpg"
-            alt="Thor Love and Thunder"
-          />
-          <div class="overlay">
-            <div class="text">Thor Love and Thunder</div>
-          </div>
-        </div>
-        <div class="col-1 card">
-          <img src="\Images\Movies\Titanic.jpg" alt="Titanic" />
-          <div class="overlay">
-            <div class="text">Titanic</div>
-          </div>
-        </div>
-        <div class="col-1 card">
-          <img src="\Images\Movies\walle.jpg" alt="walle" />
-          <div class="overlay">
-            <div class="text">Walle</div>
-          </div>
-        </div>
-        <div class="col-1 card">
-          <img src="\Images\Movies\jurassicworld.jpg" alt="jurassicworld" />
-          <div class="overlay">
-            <div class="text">Jurassic World</div>
-          </div>
-        </div>
-        <div class="col-1 card">
-          <img
-            src="\Images\Movies\The Hunger Games Mockingjay part 2.jpg"
-            alt="The Hunger Games Mockingjay part 2"
-          />
-          <div class="overlay">
-            <div class="text">The Hunger Games Mockingjay part 2</div>
-          </div>
-        </div>
+        
       </div>
     </main>
     <footer>
       <p>&copy; 2024 Film Fusion. All rights reserved.</p>
     </footer>
+    <script src="/JS\MoviesAPI.js"></script>
+
   </body>
 </html>
