--- a/Pages/Sign-in.html
+++ b/Pages/Sign-in.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Film Fusion - Sign-In</title>
     <link rel="stylesheet" href="/CSS/Home.css" />
+    <link rel="icon" href="/Images/Logo2.png" type="image/x-icon" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Italiana:wght@400;700&display=swap");
 
