--- a/Pages/movies.html
+++ b/Pages/movies.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Film Fusion - Movies</title>
     <link rel="stylesheet" href="/CSS/Movies-Series.css" />
+    <link rel="icon" href="/Images/Logo2.png" type="image/x-icon" />
   </head>
   <body>
     <header>
@@ -29,9 +30,11 @@
         </ul>
         <div class="profile-icon">
           <a href="Sign-up.html">
-            <img src="/Images/PersonCircle-removebg-preview.png" alt="Profile Icon" />
-            </a>
-
+            <img
+              src="/Images/PersonCircle-removebg-preview.png"
+              alt="Profile Icon"
+            />
+          </a>
         </div>
       </nav>
     </header>
@@ -40,139 +43,137 @@
       <div class="row">
         <div class="col-1 card">
           <a href="Description.html">
-          <img src="  " id="movieposter0" />
+            <img src="  " id="movieposter0" />
           </a>
-            <div class="overlay">
-              <div class="text" id="moviename0"> </div>
-            </div>
+          <div class="overlay">
+            <div class="text" id="moviename0"></div>
+          </div>
         </div>
         <div class="col-1 card">
           <a href="Description.html">
-          <img src="  " id="movieposter1" />
+            <img src="  " id="movieposter1" />
           </a>
-            <div class="overlay">
-              <div class="text" id="moviename1"> </div>
-            </div>
+          <div class="overlay">
+            <div class="text" id="moviename1"></div>
+          </div>
         </div>
         <div class="col-1 card">
           <a href="Description.html">
-          <img src="  " id="movieposter2" />
+            <img src="  " id="movieposter2" />
           </a>
-            <div class="overlay">
-              <div class="text" id="moviename2"> </div>
-            </div>
+          <div class="overlay">
+            <div class="text" id="moviename2"></div>
+          </div>
         </div>
         <div class="col-1 card">
           <a href="Description.html">
-          <img src="  " id="movieposter3" />
+            <img src="  " id="movieposter3" />
           </a>
-            <div class="overlay">
-              <div class="text" id="moviename3"> </div>
-            </div>
+          <div class="overlay">
+            <div class="text" id="moviename3"></div>
+          </div>
         </div>
         <div class="col-1 card">
           <a href="Description.html">
-          <img src="  " id="movieposter4" />
+            <img src="  " id="movieposter4" />
           </a>
-            <div class="overlay">
-              <div class="text" id="moviename4"> </div>
-            </div>
+          <div class="overlay">
+            <div class="text" id="moviename4"></div>
+          </div>
         </div>
         <div class="col-1 card">
           <a href="Description.html">
-          <img src="  " id="movieposter5" />
+            <img src="  " id="movieposter5" />
           </a>
-            <div class="overlay">
-              <div class="text" id="moviename5"> </div>
-            </div>
+          <div class="overlay">
+            <div class="text" id="moviename5"></div>
+          </div>
         </div>
         <div class="col-1 card">
           <a href="Description.html">
-          <img src="  " id="movieposter6" />
+            <img src="  " id="movieposter6" />
           </a>
-            <div class="overlay">
-              <div class="text" id="moviename6"> </div>
-            </div>
+          <div class="overlay">
+            <div class="text" id="moviename6"></div>
+          </div>
         </div>
         <div class="col-1 card">
           <a href="Description.html">
-          <img src="  " id="movieposter7" />
+            <img src="  " id="movieposter7" />
           </a>
-            <div class="overlay">
-              <div class="text" id="moviename7"> </div>
-            </div>
+          <div class="overlay">
+            <div class="text" id="moviename7"></div>
+          </div>
         </div>
         <div class="col-1 card">
           <a href="Description.html">
-          <img src="  " id="movieposter8" />
+            <img src="  " id="movieposter8" />
           </a>
-            <div class="overlay">
-              <div class="text" id="moviename8"> </div>
-            </div>
+          <div class="overlay">
+            <div class="text" id="moviename8"></div>
+          </div>
         </div>
         <div class="col-1 card">
           <a href="Description.html">
-          <img src="  " id="movieposter9" />
+            <img src="  " id="movieposter9" />
           </a>
-            <div class="overlay">
-              <div class="text" id="moviename9"> </div>
-            </div>
+          <div class="overlay">
+            <div class="text" id="moviename9"></div>
+          </div>
         </div>
         <div class="col-1 card">
           <a href="Description.html">
-          <img src="  " id="movieposter10" />
+            <img src="  " id="movieposter10" />
           </a>
-            <div class="overlay">
-              <div class="text" id="moviename10"> </div>
-            </div>
+          <div class="overlay">
+            <div class="text" id="moviename10"></div>
+          </div>
         </div>
         <div class="col-1 card">
           <a href="Description.html">
-          <img src="  " id="movieposter11" />
+            <img src="  " id="movieposter11" />
           </a>
-            <div class="overlay">
-              <div class="text" id="moviename11"> </div>
-            </div>
+          <div class="overlay">
+            <div class="text" id="moviename11"></div>
+          </div>
         </div>
         <div class="col-1 card">
           <a href="Description.html">
-          <img src="  " id="movieposter12" />
+            <img src="  " id="movieposter12" />
           </a>
-            <div class="overlay">
-              <div class="text" id="moviename12"> </div>
-            </div>
+          <div class="overlay">
+            <div class="text" id="moviename12"></div>
+          </div>
         </div>
         <div class="col-1 card">
           <a href="Description.html">
-          <img src="  " id="movieposter13" />
+            <img src="  " id="movieposter13" />
           </a>
-            <div class="overlay">
-              <div class="text" id="moviename13"> </div>
-            </div>
+          <div class="overlay">
+            <div class="text" id="moviename13"></div>
+          </div>
         </div>
         <div class="col-1 card">
           <a href="Description.html">
-          <img src="  " id="movieposter14" />
+            <img src="  " id="movieposter14" />
           </a>
-            <div class="overlay">
-              <div class="text" id="moviename14"> </div>
-            </div>
+          <div class="overlay">
+            <div class="text" id="moviename14"></div>
+          </div>
         </div>
         <div class="col-1 card">
           <a href="Description.html">
-          <img src="  " id="movieposter15" />
+            <img src="  " id="movieposter15" />
           </a>
-            <div class="overlay">
-              <div class="text" id="moviename15"> </div>
-            </div>
+          <div class="overlay">
+            <div class="text" id="moviename15"></div>
+          </div>
         </div>
-        
       </div>
     </main>
     <footer>
       <p>&copy; 2024 Film Fusion. All rights reserved.</p>
     </footer>
     <script src="/JS\MoviesAPI.js"></script>
-
   </body>
 </html>
