--- a/Pages/series.html
+++ b/Pages/series.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Film Fusion - Series</title>
     <link rel="stylesheet" href="/CSS/Movies-Series.css" />
+    <link rel="icon" href="/Images/Logo2.png" type="image/x-icon" />
   </head>
   <body>
     <header>
@@ -30,8 +30,11 @@
         </ul>
         <div class="profile-icon">
           <a href="Sign-up.html">
-            <img src="/Images/PersonCircle-removebg-preview.png" alt="Profile Icon" />
-            </a>
+            <img
+              src="/Images/PersonCircle-removebg-preview.png"
+              alt="Profile Icon"
+            />
+          </a>
         </div>
       </nav>
     </header>
