--- a/Pages/About-us.html
+++ b/Pages/About-us.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Film Fusion - Movies</title>
     <link rel="stylesheet" href="/CSS/About.css" />
+    <link rel="icon" href="/Images/Logo2.png" type="image/x-icon" />
   </head>
   <body>
     <header>
@@ -31,8 +32,11 @@
         </ul>
         <div class="profile-icon">
           <a href="Sign-up.html">
-            <img src="/Images/PersonCircle-removebg-preview.png" alt="Profile Icon" />
-            </a>
+            <img
+              src="/Images/PersonCircle-removebg-preview.png"
+              alt="Profile Icon"
+            />
+          </a>
         </div>
       </nav>
     </header>
