--- a/Pages/Description.html
+++ b/Pages/Description.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Film Fusion - Series</title>
     <link rel="stylesheet" href="/CSS/Description.css" />
+    <link rel="icon" href="/Images/Logo2.png" type="image/x-icon" />
 </head>
 <body>
     <header>
